<resources>
    <string name="app_name">Save Me!</string>
    <string name="action_settings">Settings</string>
    <string name="namelabelbezeichnung">Name:</string>
    <string name="willkommensnachricht">Herzlich willkommen! \n Bitte melde dich an</string>
    <string name="forwardbutton">Weiter</string>
    <string name="backbutton">Zurück</string>
    <string name="prename">Vorname</string>
    <string name="preferredColor">Lieblingsfarbe</string>
    <string name="residence">Wohnort</string>
    <string name="birthdayGirlfriend">Geburtstag der Angebeteten</string>
    <string name="anniversary">Jahrestag</string>
    <string name="favBand">Lieblingsband:</string>
    <string name="favFlowers">Lieblingsblumen:</string>
    <string name="favFood">Lieblingsessen:</string>
    <string name="favColor">Lieblingsfarbe:</string>
    <string name="birthday">Geburtstag:</string>
    <string name="valentinesday">Valentinstag:</string>

    <string name="radioMusic">Musik</string>
    <string name="radioFood">Essen</string>
    <string name="radioClothing">Kleidung</string>
    <string name="radioFlowers">Blumen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
