<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.claudius.saveme.Result_Stuff.Girlfriend_Tab"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"

    >

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp">

        <ImageView
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/ProfilePic"
            android:layout_weight="1"
            android:layout_height="90dp"
            android:layout_width="90dp" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/NameLabel"
            android:layout_weight="0.38"

            android:layout_gravity="center"
            android:textColor="@color/allblack"
            android:textSize="20sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="15dp">

        <TextView
            android:text="@string/birthday"
            android:layout_height="wrap_content"
            android:id="@+id/BDayNameLabel"
            android:layout_weight="1"
            android:layout_width="110dp"
            android:textColor="@color/allblack"
            android:textSize="16sp" />

        <TextView
            android:text="TextView"
            android:layout_height="wrap_content"
            android:id="@+id/BDayDate"
            android:layout_weight="1"
            android:layout_width="110dp"
            android:textColor="@color/allblack"
            android:textSize="16sp" />

        <TextView
            android:text="TextView"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/DaysToBDay"
            android:layout_weight="1"
            android:textColor="@color/allblack"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/anniversary"
            android:layout_height="wrap_content"
            android:id="@+id/AnniversaryLabel"
            android:layout_weight="1"
            android:layout_width="110dp"
            android:textColor="@color/allblack"
            android:textSize="16sp" />

        <TextView
            android:text="TextView"
            android:layout_height="wrap_content"
            android:id="@+id/AnniversaryDate"
            android:layout_weight="1"
            android:layout_width="110dp"
            android:textColor="@color/allblack"
            android:textSize="16sp" />

        <TextView
            android:text="TextView"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/DaysToAnniversary"
            android:layout_weight="1"
            android:textColor="@color/allblack"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/valentinesday"
            android:layout_height="wrap_content"
            android:id="@+id/ValentinesDayLabel"
            android:layout_weight="1"
            android:textColor="@color/allblack"
            android:textSize="16sp"
            android:layout_width="105dp" />

        <TextView
            android:text="TextView"
            android:layout_height="wrap_content"
            android:id="@+id/ValentinesDate"
            android:layout_weight="1"
            android:layout_width="110dp"
            android:textColor="@color/allblack"
            android:textSize="16sp" />

        <TextView
            android:text="TextView"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/DaysToValentines"
            android:layout_weight="1"
            android:textColor="@color/allblack"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="35dp">

        <TextView
            android:text="@string/favBand"
            android:layout_height="wrap_content"
            android:id="@+id/FavbandLabel"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:textSize="16sp"
            android:textColor="@color/allblack" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favBandInputLabel"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/allblack"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/favFlowers"
            android:layout_height="wrap_content"
            android:id="@+id/FavFlowersLabel"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:textColor="@color/allblack"
            android:textSize="16sp" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favFlowersInputLabel"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/allblack"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/favFood"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/FavFoodLabel"
            android:layout_weight="1"
            android:textColor="@color/allblack"
            android:textSize="16sp" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favFoodInputLabel"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/allblack"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/favColor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/favouriteColorLabel"
            android:layout_weight="1"
            android:textColor="@color/allblack"
            android:textSize="16sp" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favColorShow"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/allblack"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
