<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.claudius.saveme.Result_Stuff.result_fragment"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_marginStart="22dp"
            android:layout_marginTop="18dp"
            android:id="@+id/GFpic_OV"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_weight="0.42" />

        <TextView
            android:text="Name"
            android:textColor="@color/allblack"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:id="@+id/GFName_OV"
            android:layout_row="0"
            android:layout_column="2"
            android:textAllCaps="true"
            android:layout_marginTop="2dp"
            android:layout_weight="0.56"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:clipToPadding="true"
        android:fadeScrollbars="false"
        android:background="#EEEEEE"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >


                <TextView
                    android:text="@string/birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bdayLabel"
                    android:textSize="16sp"
                    android:textColor="@color/allblack"
                    android:layout_weight="0.01" />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bdayShow"
                    android:layout_weight="0.04"
                    android:textSize="16sp"
                    android:textColor="@color/allblack"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/anniversaryShow" />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/daysLeftBDay"
                    android:layout_weight="0.02"
                    android:textColor="@color/allblack"
                    android:textSize="16sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/daysleftAnniversary" />



            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:weightSum="1">


                <TextView
                    android:text="@string/anniversary"
                    android:layout_width="94dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/anniversaryLabel"
                    android:textSize="16sp"

                    android:textColor="@color/allblack"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:text="TextView"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/anniversaryShow"
                    android:textColor="@color/allblack"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/daysleftAnniversary"
                    android:textAlignment="textStart"
                    android:layout_width="100dp" />

                <TextView
                    android:text="TextView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/daysleftAnniversary"
                    android:textSize="16sp"

                    android:textColor="@color/allblack"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_marginEnd="88dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="0.14" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:weightSum="1">


                <TextView
                    android:text="Valentinstag:"
                    android:layout_width="94dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ValTaglabel"
                    android:textSize="16sp"
                    android:layout_gravity="center"

                    android:textColor="@color/allblack"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:text="TextView"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/ValTagShow"
                    android:textColor="@color/allblack"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/daysleftAnniversary"

                    android:layout_width="100dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:text="TextView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/daysleftValTag"
                    android:textSize="16sp"

                    android:textColor="@color/allblack"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_marginEnd="88dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="0.14"
                    android:layout_gravity="center"/>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:weightSum="1">

                <TextView
                    android:text="@string/favBand"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ShowFavBandLabel"
                    android:textSize="16sp"
                    android:textColor="@color/allblack"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_marginEnd="88dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="0.14" />

                <TextView
                    android:text="@string/favBand"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/showFavBand"
                    android:textSize="16sp"
                    android:textColor="@color/allblack"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_marginEnd="88dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="0.14" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:weightSum="1">

                <TextView
                    android:text="@string/favFlowers"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ShowFavFlowersLabel"
                    android:textSize="16sp"
                    android:textColor="@color/allblack"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_marginEnd="88dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="0.14" />

                <TextView
                    android:text="TextView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/showFavFlowers"
                    android:textSize="16sp"
                    android:textColor="@color/allblack"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_marginEnd="88dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="0.14" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:weightSum="1"
                >

                <TextView
                    android:text="@string/favFood"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ShowFavFoodLabel"
                    android:textSize="16sp"
                    android:textColor="@color/allblack"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_marginEnd="88dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="0.14" />

                <TextView
                    android:text="TextView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/showFavFood"
                    android:textSize="16sp"
                    android:textColor="@color/allblack"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_marginEnd="88dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="0.14" />
            </LinearLayout>










        </LinearLayout>
    </ScrollView>


    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:id="@+id/radiocatGroup"

        android:layout_marginLeft="10dp">

        <RadioButton
            android:text="@string/radioMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioMusic"
            android:layout_weight="1.63"
            android:textAlignment="textStart" />

        <RadioButton
            android:text="@string/radioFood"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:id="@+id/radioFood"
            android:layout_weight="0.96" />

        <RadioButton
            android:text="@string/radioFlowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioFlowers"
            android:layout_weight="0.85" />

        <RadioButton
            android:text="@string/radioClothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioClothes"
            android:layout_weight="0.58" />


    </RadioGroup>

    <GridLayout
        android:layout_width="370dp"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp">


        <Button
            android:text="Amazon"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/companyAmazon"
            android:layout_weight="1" />

        <Button
            android:text="Eventim"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/companyeventim"
            android:layout_weight="1" />

        <Button
            android:text="Zalando"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/companyZalando"
            android:layout_weight="1"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            android:text="HundM"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/companyHundM"
            android:layout_weight="1"
            android:layout_row="1"
            android:layout_column="1" />

        <Button
            android:text="Yelp"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/companyYelp"
            android:layout_weight="1"
            android:layout_row="2"
            android:layout_column="0" />

        <Button
            android:text="blumenfeede"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/companyBlumenfee"
            android:layout_weight="1"
            android:layout_row="2"
            android:layout_column="1" />


    </GridLayout>





</LinearLayout>
